fix: dark mode for group hover state

--- a/src/css/inputs.css
+++ b/src/css/inputs.css
@@ -70,7 +70,7 @@
     }
 
     [type='checkbox']:not(:disabled):not(:checked) + .checkbox-indicator {
-        @apply group-hover:bg-[#CCEEE0]
+        @apply group-hover:bg-[#CCEEE0] dark:group-hover:bg-theme-primary-900
     }
 
     [type='checkbox']:not(:disabled):checked + .checkbox-indicator {
